Bug 1322614 - TraceLogging: Don't compare text strings when they are already flushed, r=bbouvier